# anyhow-auto-context

./: AGENTS.md  Cargo.toml  README.md
examples/: context.rs  option.rs  result.rs
src/: lib.rs
