[package]
description = "Automatic context for anyhow errors based on scope and location"
edition = "2021"
license = "MIT"
name = "anyhow-auto-context"
repository = "https://github.com/imbolc/anyhow-auto-context"
version = "0.1.0"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = "forbid"
let_underscore = "forbid"
missing_docs = "forbid"
nonstandard_style = "forbid"
refining_impl_trait = "forbid"
rust_2018_compatibility = "forbid"
rust_2018_idioms = "forbid"
rust_2021_compatibility = "forbid"
rust_2024_compatibility = "forbid"
unreachable_pub = "forbid"
unused = "forbid"

[lints.clippy]
all = "forbid"
complexity = "forbid"
expect_used = "forbid"
indexing_slicing = "forbid"
panic = "forbid"
pedantic = "forbid"
perf = "forbid"
style = "forbid"
suspicious = "forbid"
todo = "forbid"
unimplemented = "forbid"
unwrap_used = "forbid"
nursery = { level = "warn", priority = -1 }

[dev-dependencies]
anyhow = "1"
