[package]
description = "Automatic context for anyhow errors based on scope and location"
edition = "2021"
license = "MIT"
name = "anyhow-auto-context"
repository = "https://github.com/imbolc/anyhow-auto-context"
version = "1.0.0"

[dependencies]

[dev-dependencies]
anyhow = "1"

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = "forbid"
let_underscore = "forbid"
missing_docs = "forbid"
nonstandard_style = "forbid"
refining_impl_trait = "forbid"
rust_2018_compatibility = "forbid"
rust_2018_idioms = "forbid"
rust_2021_compatibility = "forbid"
rust_2024_compatibility = "forbid"
unreachable_pub = "forbid"
# `cargo test --all-targets` compiles examples with `--test`, and the generated
# harness applies `allow(dead_code)`, so `dead_code = "forbid"` is incompatible.
map_unit_fn = "forbid"
path_statements = "forbid"
redundant_semicolons = "forbid"
unreachable_code = "forbid"
unreachable_patterns = "forbid"
unused_allocation = "forbid"
unused_assignments = "forbid"
unused_attributes = "forbid"
unused_braces = "forbid"
unused_doc_comments = "forbid"
unused_extern_crates = "forbid"
unused_features = "forbid"
unused_imports = "forbid"
unused_labels = "forbid"
unused_macro_rules = "forbid"
unused_macros = "forbid"
unused_must_use = "forbid"
unused_mut = "forbid"
unused_parens = "forbid"
unused_unsafe = "forbid"
unused_variables = "forbid"
unused_visibilities = "forbid"

[lints.clippy]
all = "forbid"
complexity = "forbid"
expect_used = "forbid"
indexing_slicing = "forbid"
panic = "forbid"
pedantic = "forbid"
perf = "forbid"
style = "forbid"
suspicious = "forbid"
todo = "forbid"
unimplemented = "forbid"
unwrap_used = "forbid"
nursery = { level = "warn", priority = -1 }
